Week_3/PES2UG22CS156/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: url-shortener.example.com
    http:
      paths:
      - path: /()(shorten|[a-zA-Z0-9]+)
        pathType: Prefix
        backend:
          service:
            name: url-shortener-service
            port:
              number: 80
